--- a/app/templates/roomocclist.html
+++ b/app/templates/roomocclist.html
@@ -1,4 +1,4 @@
-{% extends "base.html"}
+{% extends "base.html" %}
 
 {%block content %}
 <h1>Room details</h1>
@@ -18,21 +18,21 @@
 </table>
 <hr>
 <h2> Room Occupation Status on {{date}}: </h2>
-<table>
+<table border="1" cellpadding=3>
 	<tr>
 		<th>Room</th>
 		{%for hour in hours %}
-		</th> {{hour}}</th>
+		</th> {{ hour }}</th>
 		{%endfor%}
 	</tr>
 {% for room in room_occ_list %}
 	<tr>
 		<td>{{ room.roomNum }}</td>
-		{% for hour in room.roomHours%}
+		{% for hour in room.roomhours%}
 		{% if hour %}
-		<td bgcolor="#FF0000"> X</td>
+		<td bgcolor="#FF0000"> Occupied</td>
 		{% else %}
-		<td bgcolor="#00FF00">O</td>
+		<td bgcolor="#00FF00">Unoccupied</td>
 		{% endif %}
 		{% endfor %}
 	</tr>
